# shared_projects

Project#1_LLM/: cb#4L.py  config.py  persistent_mem.pt  titan_memory.pt  tool_module.py  tool_spec.json
Project2_plen_robot_in_gazebo/plen_ros/src/plen_ros/: CMakeLists.txt  CMakeLists2.txt  package.xml  plen.urdf  robot.urdf  setup.py
Project2_plen_robot_in_gazebo/plen_ros/src/plen_ros/config/: plen_control.yaml  plen_trajectory_control.yaml  plen_walk_forward.json  teleop_twist_joy.yaml
Project2_plen_robot_in_gazebo/plen_ros/src/plen_ros/launch/: controller_launch.py  gazebo_plen_launch#1.py  gazebo_plen_launch.py  gazebo_plen_launch2.py  plen_walk_launch#2.py  plen_walk_launch.py  plen_walk_launch2.py  teleop_twist_joy_launch.py  traj_controller_launch.py  view_plen_launch.py
Project2_plen_robot_in_gazebo/plen_ros/src/plen_ros/meshes2/: plen_ankle_foot_left.stl  plen_ankle_foot_right.stl  plen_arm_left.stl  plen_arm_right.stl  plen_back.stl  plen_body.stl  plen_chest.stl  plen_chin.stl  plen_hand_left.stl  plen_hand_right.stl  plen_head.stl  plen_knee_left.stl  plen_knee_right.stl  plen_servo_box_left_ankle.stl  plen_servo_box_left_hip.stl  plen_servo_box_right_ankle.stl  plen_servo_box_right_hip.stl  plen_servo_bracket_hip_left.stl  plen_servo_bracket_hip_right.stl  plen_servo_bracket_shoulder_left.stl  plen_servo_bracket_shoulder_right.stl  plen_shin_left.stl  plen_shin_right.stl
Project2_plen_robot_in_gazebo/plen_ros/src/plen_ros/src/: gazebo_tools_test.cpp  joint_test.py  joint_trajectory_test.py  plen_td3.py  walk_eval.py
Project2_plen_robot_in_gazebo/plen_ros/src/plen_ros/urdf/: plen.gazebo.xacro  plen.gazebo2.xacro  plen.urdf2.xacro
Project2_plen_robot_in_gazebo/plen_ros/src/plen_ros/urdf/xacro/: plen.gazebo.xacro
Project2_plen_robot_in_gazebo/plen_ros/src/plen_ros/worlds/: empty_no_force.world
Project2_plen_robot_in_gazebo/plen_ros/src/plen_ros_helpers/: package.xml  setup.py
Project2_plen_robot_in_gazebo/plen_ros/src/plen_ros_helpers/src/plen_ros_helpers/: controllers_connection.py  gazebo_connection.py  joint_publisher.py  joint_traj_publisher.py  macro_runner.py  plen_env.py  plen_walk.py  robot_gazebo_env.py  td3.py
