<?xml version="1.0"?>
<package format="3">
  <name>plen_ros</name>
  <version>0.0.1</version>
  <description>Visualise and control a PLEN2 robot</description>

  <maintainer email="mrahme97@gmail.com">Maurice Rahme</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <!-- Removed the redundant generic dependency for gazebo_ros -->
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  
  <build_depend>xacro</build_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  
  <!-- Mark this package as an interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <member_of_group>plen_ros_helpers</member_of_group>
    <build_type>ament_cmake</build_type>
  </export>
</package>

