<?xml version="1.0"?>
<package format="3">
  <name>plen_ros_helpers</name>
  <version>0.0.1</version>
  <description>Helper scripts for PLEN2</description>

  <maintainer email="mrahme97@gmail.com">Maurice Rahme</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>trajectory_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
